# general-kb

./: .gitignore  .markdownlint.json  .mike.yml  QUICKSTART.md  README.md  SETUP.md  build.sh  check_links.sh  create_sample_versions.sh  external_customizations.html  external_site.html  fix_markdown.sh  header.html  header_structure.txt  internal_customizations.html  link-check-report.md  link_checker.py  lint.sh  mkdocs.internal.backup.yml  mkdocs.internal.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  verify_docs.sh  version_internal.sh
.github/: README.md
.github/workflows/: ci.yml  deploy.yml  disable-deploy.yml  preview.yml
docs/: CHANGELOG.md  customizations.md  faq.md  index.md  versions.json
docs/api/: overview.md
docs/features/: jira-integration.md  one-click-sharing.md
docs/getting-started/: content-format-example.md  installation.md  internal-callout-example.md  mixed-content-example.md
docs/home/: configuration.md  getting-started.md  index.md
docs/internal/: algolia-setup.md  build-differences.md  content-guide.md  development-guide.md  index.md  internal-content.md  link-validation.md  markdown-guide.md  release-process.md  security-reporting.md  version-management.md
docs/overrides/: main.html  redirect.html
docs/release-notes/: index.md  latest.md
docs/usage/: index.md  user-guide.md
latest/: 404.html  index.html  sitemap.xml
latest/CHANGELOG/: index.html
latest/customizations/: index.html
latest/faq/: index.html
latest/home/: index.html
latest/internal/: index.html
latest/release-notes/: index.html
latest/search/: search_index.json
site-internal/: 404.html  index.html
(+87 files in other folders)
