
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.13",
    "mkdocs-minify-plugin>=0.8.0",
    "package-name>=0.1",
    "pymdown-extensions>=10.15",
]

[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
mike = ">=2.1.3"
mkdocs = ">=1.6.1"
mkdocs-material = ">=9.6.13"
mkdocs-minify-plugin = ">=0.8.0"
pymdown-extensions = ">=10.15"
pytest = "^8.3.5"
mkdocs-linkcheck = "^1.0.6"
mkdocs-htmlproofer-plugin = "^1.3.0"
requests = "^2.32.3"
